--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
   <title>Webpack</title>
 </head>
 <body>
-  
+  <header id="header-only"></header>
+  <main>
+    <div id="root">
+    </div>
+  </main>
+  <footer></footer>
 </body>
 </html>
